package com.dainws.games.crm.domain.core.effect;

public interface EffectContextFactory {
	EffectContext createContextFromTemplate(EffectContextTemplate contextTemplate);
}
